# arc-lucifer-cleanroom-runtime

./: CHANGELOG.md  README.md  pyproject.toml  smoke_trace.html
docs/: INDEX.md  REPO_SEO.md  architecture.md  benchmarks.md  production_readiness.md
scripts/: bootstrap.sh  release_check.sh  smoke.sh
src/arc_kernel/: state.py
src/arc_lucifer_cleanroom_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cognition_services/: __init__.py  goal_engine.py
src/lucifer_runtime/: cli.py  cli_handlers.py  cli_parser.py  runtime.py
src/perception_adapters/: __init__.py
src/resilience/: __init__.py
src/self_improve/: candidates.py  promotion.py
tests/: test_code_editing_and_promotion.py
