[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-lucifer-cleanroom-runtime"
version = "2.10.3"
description = "Deterministic local-first AI operator runtime with receipts, replay, rollback, ranked memory, and DARPA-grade repair intelligence (FixNet)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Gary Doman"}]
dependencies = []

[project.scripts]
lucifer = "lucifer_runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
